[project]
name = "py-interpreter"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexanderPAI",email = "lawlikeart@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
